test/tests/compiler/18_structures/invalid_types/extra_credit/union_struct_conflicts/conflicting_tag_decl_and_use_self_reference.plx
#  It's illegal to use a 'union s' type when a 'struct s' type is in scope ,
#  * or vice versa.
#  

pub fn main(none) i32 {
    type struc s;
    
    {
        ptr: *union s;
    }
    return 0
}
